Products/ZenUI3/browser/resources/css/zenoss.css
/* ... */
.tree-severity-icon-small-critical {
  background-position: 0px  0px !important;
}


.tree-severity-icon-small-error {
  background-position: 0px -20px !important;
}


.tree-severity-icon-small-warning {
  background-position: 0px -40px !important;
}


.tree-severity-icon-small-info {
  background-position: 0px -60px !important;
}


.tree-severity-icon-small-debug {
  background-position: 0px -80px !important;
}


.tree-severity-icon-small-clear {
  background-position: 0px -100px !important;
}


.tree-template-icon-component {
  background-position: 0px -80px !important;
}


.tree-template-icon-bound {
  background-position: 0px -100px !important;
}


.tree-template-icon-bound-span {
  background-position: 0px -100px !important;
}


.tree-template-icon-component-span {
  background-position: 0px -80px !important;
}


.tree-node-no-icon {
  width: 16px !important;
}


.x-grid-filter {
  background-color: #bdbdbd;
  border-bottom: 1px solid black;
}

.x-grid-filter .x-panel-body, .x-grid-filter td {
  background-color: #bdbdbd;
}

.status-icon-small {
  width: 16px;
  height: 14px;
  background: transparent url() no-repeat;
  margin: 0 auto;
}


.status-icon-small-acknowledged {
  width: 16px;
  height: 14px;
  background: transparent url() no-repeat;
  margin: 0 auto;
  background-image: url(/++resource++zenui/img/xtheme-zenoss/icon/acknowledge-small.png);
}


.status-icon-small-suppressed {
  width: 16px;
  height: 14px;
  background: transparent url() no-repeat;
  margin: 0 auto;
  background-image: url(/++resource++zenui/img/xtheme-zenoss/icon/suppress-small.png);
}


.status-icon-small-aged, .status-icon-small-cleared, .status-icon-small-closed {
  width: 16px;
  height: 14px;
  background: transparent url() no-repeat;
  margin: 0 auto;
  background-image: url(/++resource++zenui/img/xtheme-zenoss/icon/close-small.png);
}


.full_event_props {
  padding-left: 3em;
}


td.proptable_key {
  font-weight: bold;
  text-align: left;
  padding-right: 1em;
}


table.proptable {
  border: border-collapse;
}


.show_details {
  cursor: hand;
  cursor: pointer;
  font-size: 13px;
  color: #7199e6;
  text-decoration: none;
  padding-left: 3em;
  padding-top: .5em;
  padding-bottom: .5em;
}


.event_details {
  font-size: 13px;
  text-decoration: none;
  padding-left: 3em;
  padding-bottom: 1em;
  padding-top: 1em;
}


.x-toolbar div.xtb-text.lastupdated {
  font-size: 10px;
  color: #373737;
  font-weight: bold;
  padding-right: 1em;
  padding-bottom: 3px;
  text-transform: uppercase;
}


.refreshevery {
  color: white;
  font-weight: bold;
  background-color: #474747;
  padding: 3px;
  display: block;
  height: 15px;
}



.xtb-text.livegridinfopanel {
  font-size: 10px;
  color: #373737;
  font-weight: bold;
  padding-right: 1em;
  padding-bottom: 3px;
  margin-top: 4px;
  text-transform: uppercase;
  position: relative;
  top: -8px;
}


div.dialog-link {
  text-align: center;
}

div.dialog-link a {
  color: lightblue;
}


.proptable tr {
  background-color: transparent;
}

.proptable tr.even {
  background-color: #eaf0f7;
}

.proptable td {
  font-size: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
}


.searchfield-ml, .searchfield-mr, .searchfield-mc, .searchfield-black-ml, .searchfield-black-mr, .searchfield-black-mc {
  height: 21px;
  border: medium none;
  background: transparent url(/++resource++zenui/img/xtheme-zenoss/form/searchfield-sprite.png) no-repeat;
}


.searchfield-ml, .searchfield-black-ml {
  padding-left: 18px;
}


.searchfield-mr, .searchfield-black-mr {
  padding-right: 10px;
}


.searchfield-ml {
  background-position: 0 0;
}


.searchfield-mc {
  background-position: 0 -21px;
  background-repeat: repeat-x;
}


.searchfield-mr {
  background-position: right -42px;
}


.searchfield-black-ml {
  background-position: 0 -63px;
}


.searchfield-black-mc {
  background-position: 0 -84px;
  background-repeat: repeat-x;
  color: white;
}


.searchfield-black-mr {
  background-position: right -105px;
}


.searchfield-black-mc .x-form-text, .searchfield-mc .x-form-text {
  border: medium none;
  background: transparent url();
}


.searchfield-black .x-form-arrow-trigger {
  background-position: -102px 0;
  border-bottom: medium none;
}

.searchfield-black .x-form-arrow-trigger.x-form-trigger-click, .searchfield-black .x-form-arrow-trigger.x-form-trigger-over {
  background-position: -119px 0;
}


.saved-search-item .x-combo-list-inner {
  background-image: url(../img/xtheme-zenoss/window/left-right.png);
  color: white;
  padding: 15px;
  overflow-y: hidden;
}

.saved-search-item .x-combo-list-item {
  border: none;
}

.saved-search-item .x-combo-selected {
  background-color: #ddd;
  color: black;
}


#manage-search-link {
  font-size: 12px;
}


table.eventrainbow {
  border-collapse: collapse;
  height: 16px;
  width: 100%;
  cursor: pointer;
  cursor: hand;
}

table.eventrainbow:hover {
  cursor: pointer;
}

table.eventrainbow_cols_3 tr td {
  width: 33%;
}

table.eventrainbow_cols_4 tr td {
  width: 25%;
}

table.eventrainbow_cols_5 tr td {
  width: 20%;
}


div.portlet-body.yui-dt table.eventrainbow {
  width: 18em;
}

div.zenportlet table.eventrainbow {
  width: 18em;
}

div.zenportlet .eventrainbow td {
  padding-left: 22px;
  color: white;
  vertical-align: middle;
}


.eventrainbow td {
  padding-left: 22px;
  color: white;
  vertical-align: middle;
}

.eventrainbow td.severity-icon-small {
  width: 25px;
}


table.innerzentable table.eventrainbow tr td {
  padding-left: 23px;
}


div.zenportlet .eventrainbow td, .largetoolbar .eventrainbow td {
  /*padding-left: 25px;*/
}


div.zenportlet table.eventrainbow {
  height: 23px;
  border: 1px solid #707070;
  border-right-color: #bbb;
  border-bottom-color: #bbb;
}


.largetoolbar table.eventrainbow {
  height: 23px;
  border: 1px solid #707070;
  border-right-color: #bbb;
  border-bottom-color: #bbb;
  margin-top: 8px;
}


table.eventrainbow td.critical {
  background-color: #d60000;
}
/* ... */

